tests/negative/std/thread_callback_type.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that Thread and spawn only accept zero-argument void callbacks.

import { Thread, spawn } from "std:thread";

function main(): void {
    let badValue = new Thread(123);
    let badArgs = new Thread((value: int) => {
        print(value);
    });
    let badReturn = spawn(() => {
        return 1;
    });
}
